src/objects/Capability__c.object
<CustomObject>
    <description>TOOLKIT - An object that represents as set ability, such as managing opportunities.</description>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Features</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Benefits__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Benefits</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business__c</fullName>
        <label>Business Driver(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Simplification</fullName>
                </value>
                <value>
                    <fullName>Value Add</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments_NSS__c</fullName>
        <description>Field use for comments from NSS Team</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments NSS</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Feature_Category__c</fullName>
        <label>Feature Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Functional_Area</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Feature_Description__c</fullName>
        <description>Details of the capability</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Feature Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Feature_Dev_Team__c</fullName>
        <label>Feature Dev Team</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accenture</fullName>
                </value>
                <value>
                    <fullName>COE</fullName>
                </value>
                <value>
                    <fullName>CPQ Master Data</fullName>
                </value>
                <value>
                    <fullName>DSC</fullName>
                </value>
                <value>
                    <fullName>Admin Team</fullName>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>Atos</fullName>
                </value>
                <value>
                    <fullName>Accenture Support Recommended</fullName>
                </value>
                <value>
                    <fullName>Nokia</fullName>
                </value>
                <value>
                    <fullName>HCL</fullName>
                </value>
                <value>
                    <fullName>Analytics</fullName>
                </value>
                <value>
                    <fullName>SDC</fullName>
                    <isActive>false</isActive>
                    <label>SDC</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Feature_Number__c</fullName>
        <displayFormat>{0000}</displayFormat>
        <externalId>true</externalId>
        <label>Feature Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Feature_T_Shirt_Size_High_Level__c</fullName>
        <inlineHelpText>XS	&lt; 5MDs - Very Small
S	5-10 MDs - Small
M	10-15 MDs - Medium
L	15-20 MDs - Large
XL	20-30 MDs - X-Large
XXL	30-40 MDs - XX-Large
XXXL	&gt; 40 MDs - XXX-Large</inlineHelpText>
        <label>Feature T-Shirt Size (High-Level)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Very Small</fullName>
                </value>
                <value>
                    <fullName>Small</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Large</fullName>
                </value>
                <value>
                    <fullName>X-Large</fullName>
                </value>
                <value>
                    <fullName>XX-Large</fullName>
                </value>
                <value>
                    <fullName>XXX-Large</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Feature_T_Shirt_Size_Roll_Up__c</fullName>
        <formula>IF(Feature_T_Shirt_Value_Roll_Up__c = 0, &quot;Not Estimated&quot;,
 IF(Feature_T_Shirt_Value_Roll_Up__c &lt;= 5, &quot;Very Small&quot;,
  IF((Feature_T_Shirt_Value_Roll_Up__c &gt; 5 &amp;&amp; Feature_T_Shirt_Value_Roll_Up__c &lt;= 10), &quot;Small&quot;,
   IF((Feature_T_Shirt_Value_Roll_Up__c &gt; 10 &amp;&amp; Feature_T_Shirt_Value_Roll_Up__c &lt;= 15), &quot;Medium&quot;,
    IF((Feature_T_Shirt_Value_Roll_Up__c &gt; 15 &amp;&amp; Feature_T_Shirt_Value_Roll_Up__c &lt;= 20), &quot;Large&quot;,
     IF((Feature_T_Shirt_Value_Roll_Up__c &gt; 20 &amp;&amp; Feature_T_Shirt_Value_Roll_Up__c &lt;= 30), &quot;X-Large&quot;,
      IF((Feature_T_Shirt_Value_Roll_Up__c &gt; 30 &amp;&amp; Feature_T_Shirt_Value_Roll_Up__c &lt;= 40), &quot;XX-Large&quot;,
       IF(Feature_T_Shirt_Value_Roll_Up__c &gt; 40, &quot;XXX-Large&quot;,


&quot;ERROR&quot;))))))))</formula>
        <inlineHelpText>Aggregated T-Shirt Size based on Related User Stories</inlineHelpText>
        <label>Feature T-Shirt Size (Roll-Up)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feature_T_Shirt_Value_High_Level__c</fullName>
        <formula>CASE( Feature_T_Shirt_Size_High_Level__c ,
&quot;Very Small&quot;, 5,
&quot;Small&quot;, 10,
&quot;Medium&quot;, 15,
&quot;Large&quot;, 20,
&quot;X-Large&quot;, 30,
&quot;XX-Large&quot;, 40,
&quot;XXX-Large&quot;, 80,
null
)</formula>
        <label>Feature T-Shirt Value (High-Level)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Feature_T_Shirt_Value_Roll_Up__c</fullName>
        <inlineHelpText>Sum of Related User Story T-Shirt Values</inlineHelpText>
        <label>Feature T-Shirt Value (Roll-Up)</label>
        <summarizedField>User_Story__c.User_Story_T_Shirt_Value_Roll_Up__c</summarizedField>
        <summaryForeignKey>User_Story__c.Capability__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Feature_Type__c</fullName>
        <inlineHelpText>Defines the type of effort/outcome necessary to support this feature</inlineHelpText>
        <label>Feature Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Delivery</fullName>
                    <default>true</default>
                    <label>Delivery</label>
                </value>
                <value>
                    <fullName>Advisory</fullName>
                </value>
                <value>
                    <fullName>POC</fullName>
                </value>
                <value>
                    <fullName>Conceptual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inputs_Dependencies__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Inputs/Dependencies</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>L3_Process__c</fullName>
        <label>L3 Process</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>L3_Process</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L4_Process_Reference__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>L4 Process Reference</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Needs_Cleanup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Needs Cleanup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Out_of_Scope__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Assumptions/Limitations</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Outputs_Acceptance_Criteria__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Outputs/Acceptance Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Overall_T_Shirt_Size__c</fullName>
        <formula>IF(
 OR(ISNULL(Feature_T_Shirt_Size_Roll_Up__c),
     Feature_T_Shirt_Size_Roll_Up__c = &quot;Not Estimated&quot;,
     Feature_T_Shirt_Size_Roll_Up__c = &quot;&quot;),
  TEXT(Feature_T_Shirt_Size_High_Level__c),
  Feature_T_Shirt_Size_Roll_Up__c
)</formula>
        <inlineHelpText>Final T-Shirt Sizing to be used, takes the roll-up size if it exists else uses the high-level size</inlineHelpText>
        <label>Overall T-Shirt Size</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overall_T_Shirt_Value__c</fullName>
        <formula>IF(
 OR(ISNULL(Feature_T_Shirt_Value_Roll_Up__c),
    Feature_T_Shirt_Value_Roll_Up__c = 0),
 Feature_T_Shirt_Value_High_Level__c,
 Feature_T_Shirt_Value_Roll_Up__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Final T-Shirt Value to be used, takes the roll-up value if it exists else uses the high-level value</inlineHelpText>
        <label>Overall T-Shirt Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Priority</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reference_Material_s__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>To associate supporting material references such as Approval Matrix, LoA Policy, etc.</inlineHelpText>
        <label>Reference Material(s)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related release to the capability</description>
        <label>Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipName>Capabilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Risks__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Risks</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SOURCE_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SOURCE ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scoping_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Scoping Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Scoping_Identifier__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>For PM usage, to associate Feature set to initial contractual scope</inlineHelpText>
        <label>Scoping Identifier</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>Pending CCB Approval</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Blocked</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Feature Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Accounts, Leads, Contacts</fullName>
                </value>
                <value>
                    <fullName>Approvals/IWA</fullName>
                </value>
                <value>
                    <fullName>Apttus</fullName>
                </value>
                <value>
                    <fullName>CMD Pack 4</fullName>
                </value>
                <value>
                    <fullName>COE</fullName>
                </value>
                <value>
                    <fullName>CPQ - Cross BG</fullName>
                </value>
                <value>
                    <fullName>CPQ - Direct ION</fullName>
                </value>
                <value>
                    <fullName>CPQ - Direct MN</fullName>
                </value>
                <value>
                    <fullName>CPQ - Direct NSW</fullName>
                </value>
                <value>
                    <fullName>CPQ - Enterprise</fullName>
                </value>
                <value>
                    <fullName>CPQ - Indirect</fullName>
                </value>
                <value>
                    <fullName>CPQ - Masterdata</fullName>
                </value>
                <value>
                    <fullName>CPQ - NPI All</fullName>
                </value>
                <value>
                    <fullName>CPQ - NPI FN</fullName>
                </value>
                <value>
                    <fullName>CPQ - NPI ION</fullName>
                </value>
                <value>
                    <fullName>CPQ - NPI MN</fullName>
                </value>
                <value>
                    <fullName>CPQ - NPI NSW</fullName>
                </value>
                <value>
                    <fullName>CPQ - QTC Quoting</fullName>
                </value>
                <value>
                    <fullName>CPQ - System &amp; Data</fullName>
                </value>
                <value>
                    <fullName>CPQ - Unassigned</fullName>
                </value>
                <value>
                    <fullName>Data Migration</fullName>
                </value>
                <value>
                    <fullName>Digital Sales</fullName>
                </value>
                <value>
                    <fullName>Doc Strategy</fullName>
                </value>
                <value>
                    <fullName>Encryption</fullName>
                </value>
                <value>
                    <fullName>Forecasting</fullName>
                </value>
                <value>
                    <fullName>Interfaces/ETL</fullName>
                </value>
                <value>
                    <fullName>LoA</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>NGOEP</fullName>
                </value>
                <value>
                    <fullName>NGOEP – CPO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Theme__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Theme</label>
        <referenceTo>Theme__c</referenceTo>
        <relationshipLabel>Features</relationshipLabel>
        <relationshipName>Features</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tool_Template_Documented_Knowledge__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tool, Template, Documented Knowledge</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Total_Related_User_Stories__c</fullName>
        <label>Total Related User Stories</label>
        <summaryForeignKey>User_Story__c.Capability__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_User_Stories__c</fullName>
        <inlineHelpText># of User Stories related to this Feature.</inlineHelpText>
        <label>Total User Stories</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Workstream__c</fullName>
        <label>Workstream</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1-Interfaces &amp; Data Migration</fullName>
                </value>
                <value>
                    <fullName>2-People</fullName>
                </value>
                <value>
                    <fullName>3-Sales Process</fullName>
                </value>
                <value>
                    <fullName>4-Reporting &amp; Forecasting</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>ERM</fullName>
                </value>
                <value>
                    <fullName>EEC</fullName>
                </value>
                <value>
                    <fullName>CSR</fullName>
                </value>
                <value>
                    <fullName>CPQ - NPI</fullName>
                </value>
                <value>
                    <fullName>CPQ - Main</fullName>
                </value>
                <value>
                    <fullName>CPQ - Direct MN</fullName>
                    <isActive>false</isActive>
                    <label>CPQ - Direct MN</label>
                </value>
                <value>
                    <fullName>CPQ - Direct NSW</fullName>
                    <isActive>false</isActive>
                    <label>CPQ - Direct NSW</label>
                </value>
                <value>
                    <fullName>CPQ - Indirect</fullName>
                    <isActive>false</isActive>
                    <label>CPQ - Indirect</label>
                </value>
                <value>
                    <fullName>CPQ - Masterdata</fullName>
                    <isActive>false</isActive>
                    <label>CPQ - Masterdata</label>
                </value>
                <value>
                    <fullName>CPQ - NPI All</fullName>
                    <isActive>false</isActive>
                    <label>CPQ - NPI All</label>
                </value>
                <value>
                    <fullName>CPQ - NPI FN</fullName>
                    <isActive>false</isActive>
                    <label>CPQ - NPI FN</label>
                </value>
                <value>
                    <fullName>CPQ - NPI ION</fullName>
                    <isActive>false</isActive>
                    <label>CPQ - NPI ION</label>
                </value>
                <value>
                    <fullName>CPQ - NPI MN</fullName>
                    <isActive>false</isActive>
                    <label>CPQ - NPI MN</label>
                </value>
                <value>
                    <fullName>CPQ - NPI NSW</fullName>
                    <isActive>false</isActive>
                    <label>CPQ - NPI NSW</label>
                </value>
                <value>
                    <fullName>CPQ - Solution Taskforce</fullName>
                    <isActive>false</isActive>
                    <label>CPQ - Solution Taskforce</label>
                </value>
                <value>
                    <fullName>CPQ - Surround CQs</fullName>
                    <isActive>false</isActive>
                    <label>CPQ - Surround CQs</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Feature</label>
    <listViews>
        <fullName>Accounts_Leads_Contacts</fullName>
        <columns>Feature_Number__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Feature_Description__c</columns>
        <columns>Feature_Category__c</columns>
        <columns>L4_Process_Reference__c</columns>
        <columns>Priority__c</columns>
        <columns>Workstream__c</columns>
        <columns>Team__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Team__c</field>
            <operation>equals</operation>
            <value>&quot;Accounts, Leads, Contacts&quot;,Org Strategy/Sales Hierarchy</value>
        </filters>
        <filters>
            <field>Release__c</field>
            <operation>contains</operation>
            <value>october</value>
        </filters>
        <label>People Release 4</label>
    </listViews>
    <listViews>
        <fullName>Approvals_IWA</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Team__c</field>
            <operation>equals</operation>
            <value>Approvals/IWA</value>
        </filters>
        <filters>
            <field>Release__c</field>
            <operation>contains</operation>
            <value>october</value>
        </filters>
        <label>Approvals / IWA</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>COE_Sales_Team_Portugal_Capability</fullName>
        <filterScope>Queue</filterScope>
        <label>COE Sales Team Portugal</label>
        <queue>COE_Sales_Team_Portugal</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CPQ</fullName>
        <columns>NAME</columns>
        <columns>Feature_Category__c</columns>
        <columns>Release__c</columns>
        <columns>Status__c</columns>
        <columns>Team__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Team__c</field>
            <operation>contains</operation>
            <value>CPQ</value>
        </filters>
        <label>CPQ</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CoE_October_Release</fullName>
        <columns>NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>Feature_T_Shirt_Size_High_Level__c</columns>
        <columns>Priority__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Feature_Dev_Team__c</field>
            <operation>equals</operation>
            <value>COE</value>
        </filters>
        <filters>
            <field>Release__c</field>
            <operation>contains</operation>
            <value>October</value>
        </filters>
        <label>CoE October Release</label>
    </listViews>
    <listViews>
        <fullName>Copy_of_ERM_2_1_Feb19</fullName>
        <columns>NAME</columns>
        <columns>Feature_Description__c</columns>
        <columns>Feature_Number__c</columns>
        <columns>Team__c</columns>
        <columns>Feature_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Release__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Feature_Dev_Team__c</field>
            <operation>equals</operation>
            <value>COE</value>
        </filters>
        <filters>
            <field>Release__c</field>
            <operation>equals</operation>
            <value>SingleCRM Release February 2019</value>
        </filters>
        <label>Features from Coe to Feb19</label>
        <sharedTo>
            <group>CoE_PT</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Data_Migration</fullName>
        <columns>NAME</columns>
        <columns>Feature_Description__c</columns>
        <columns>Feature_Category__c</columns>
        <columns>L3_Process__c</columns>
        <columns>L4_Process_Reference__c</columns>
        <columns>Priority__c</columns>
        <columns>Workstream__c</columns>
        <columns>Team__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Team__c</field>
            <operation>equals</operation>
            <value>Data Migration</value>
        </filters>
        <label>Data Migration</label>
    </listViews>
    <listViews>
        <fullName>Digital_Sales_Feature_List</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>SW</value>
        </filters>
        <label>Digital Sales - Feature List</label>
    </listViews>
    <listViews>
        <fullName>Doc_Strategy</fullName>
        <columns>NAME</columns>
        <columns>Feature_Number__c</columns>
        <columns>Feature_Description__c</columns>
        <columns>Feature_Category__c</columns>
        <columns>L3_Process__c</columns>
        <columns>L4_Process_Reference__c</columns>
        <columns>Priority__c</columns>
        <columns>Workstream__c</columns>
        <columns>Team__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Team__c</field>
            <operation>equals</operation>
            <value>Doc Strategy</value>
        </filters>
        <label>Doc Strategy</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Doc_Strategy1</fullName>
        <columns>NAME</columns>
        <columns>Feature_Description__c</columns>
        <columns>Feature_Category__c</columns>
        <columns>L3_Process__c</columns>
        <columns>L4_Process_Reference__c</columns>
        <columns>Priority__c</columns>
        <columns>Workstream__c</columns>
        <columns>Team__c</columns>
        <columns>Status__c</columns>
        <columns>Feature_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Team__c</field>
            <operation>equals</operation>
            <value>Doc Strategy</value>
        </filters>
        <label>Doc Strategy</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>EDU_Ticketing_System_Features</fullName>
        <columns>NAME</columns>
        <columns>Feature_Category__c</columns>
        <columns>Release__c</columns>
        <columns>Status__c</columns>
        <columns>Team__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Release__c</field>
            <operation>contains</operation>
            <value>EDU TS</value>
        </filters>
        <label>EDU TS - Features</label>
    </listViews>
    <listViews>
        <fullName>ERM_2_1</fullName>
        <columns>NAME</columns>
        <columns>Feature_Description__c</columns>
        <columns>Feature_Number__c</columns>
        <columns>Team__c</columns>
        <columns>Feature_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Release__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>ERM</value>
        </filters>
        <label>ERM 2.1</label>
        <sharedTo>
            <group>CoE_PT</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ERM_Features</fullName>
        <columns>NAME</columns>
        <columns>Feature_Description__c</columns>
        <columns>Feature_Number__c</columns>
        <columns>Team__c</columns>
        <columns>Feature_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Release__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Workstream__c</field>
            <operation>equals</operation>
            <value>ERM</value>
        </filters>
        <label>ERM - Features</label>
    </listViews>
    <listViews>
        <fullName>Encryption</fullName>
        <columns>NAME</columns>
        <columns>Feature_Description__c</columns>
        <columns>Feature_Category__c</columns>
        <columns>L3_Process__c</columns>
        <columns>L4_Process_Reference__c</columns>
        <columns>Priority__c</columns>
        <columns>Workstream__c</columns>
        <columns>Team__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Team__c</field>
            <operation>equals</operation>
            <value>Encryption</value>
        </filters>
        <label>Encryption</label>
    </listViews>
    <listViews>
        <fullName>Forecasting</fullName>
        <columns>NAME</columns>
        <columns>Feature_Description__c</columns>
        <columns>Feature_Category__c</columns>
        <columns>L3_Process__c</columns>
        <columns>L4_Process_Reference__c</columns>
        <columns>Release__c</columns>
        <columns>Priority__c</columns>
        <columns>Workstream__c</columns>
        <columns>Team__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Team__c</field>
            <operation>equals</operation>
            <value>Forecasting</value>
        </filters>
        <label>Forecasting</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Feature Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Features</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>